--- a/Stricken/updates.html
+++ b/Stricken/updates.html
@@ -25,9 +25,9 @@
         </header>
 
 		<section>
-			<h2>Stricken 2</h2>
+			<h2>Release</h2>
 
-            
+            <p><em>Stricken</em>'s upcoming sequel, <em>Release</em> is currently in writing.</p>
 		</section>
 
 		<br>
